Add hot reloading for html

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="profile">
         <img src="./images/image.jpg" alt="Image">
-        <h1>Webpack Course</h1>
+        <h1>Html reloading</h1>
     </div>
-    <script src="main_bundle.js"></script>
 </body>
 </html>
