Add react to the project

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <div class="profile">
         <img src="./images/image.jpg" alt="Image">
         <h1>Html reloading</h1>
+        <div id="react-root"></div>
     </div>
 </body>
 </html>
