--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
 </head>
 <body>
-    <div class="profile">
-        <img src="./images/image.jpg" alt="Image">
-        <h1>Html reloading</h1>
-    </div>
+    <root-app>Loading...</root-app>
 </body>
 </html>
